# agentic-rag-knowledge-system

./: .gitignore  README.md  docker-compose.yml  langgraph.json  pyproject.toml
evals/: index_qdrant_llm_playbook.py  run_qdrant_hybrid_retrieval.py
evals/relevance/: llm_playbook_seed.jsonl
notebooks/: 01_qwen3_embedding_spike.ipynb
src/agentic_rag_knowledge_system/: __init__.py  embeddings.py  evidence.py  settings.py
src/agentic_rag_knowledge_system/ingestion/: __init__.py  cache.py  chunking.py  loaders.py  models.py  pipeline.py  serialization.py
src/agentic_rag_knowledge_system/retrieval/: __init__.py  evaluation.py  metrics.py  qdrant_store.py  schemas.py
src/agentic_rag_knowledge_system/workflow/: __init__.py  graph.py  nodes.py  state.py
tests/: test_embeddings.py  test_evidence.py  test_ingestion_chunking.py  test_ingestion_loaders.py  test_ingestion_pipeline.py  test_langgraph_config.py  test_package.py  test_retrieval_metrics.py  test_retrieval_qdrant_store.py  test_settings.py  test_workflow_graph.py  test_workflow_nodes.py  test_workflow_state.py
